<resources>
    <string name="app_name">建培教育</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--底部导航栏-->
    <string name="main_btn_one">首页</string>
    <string name="main_btn_two">学园</string>
    <string name="main_btn_three">选课</string>
    <string name="main_btn_four">我的</string>
    <string name="main_btn_five">题库</string>


    <string name="back">返回</string>

    <!---->

    <string name="login_botm_tip_o">《建培教育用户隐私协议》</string>

    <!--login-->
    <string name="registered">注册</string>
    <string name="login_tip">登录即代表您已经阅读同意</string>
    <string name="login_tipt">《建培教育用户协议》</string>
    <string name="login_phone">请输入手机号</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_forget_pwd">忘记密码?</string>
    <string name="login">登录</string>
    <string name="code">请输入验证码</string>
    <string name="send_code">发送验证码</string>

    <string name="login_code">短信验证码登录</string>
    <string name="login_wx">微信登录</string>
    <string name="login_btn_pwd">密码登录</string>


    <!--reg-->
    <string name="reg_btn">下一步</string>
    <string name="login_botm_tip">注册即代表您已经阅读同意</string>
    <string name="reg_pwd_re">请确认密码</string>
    <string name="reg_getcode">获取验证码</string>
    <string name="reg_title">注册</string>

    <string name="xieyi_name">用户隐私协议须知</string>

    <!--bind-->
    <string name="bind_btn">绑定</string>

    <!--forget-->
    <string name="forget_title">重置密码</string>
    <!--select_zhuanye-->

    <string name="select_zhuanye">请选择专业</string>

    <!--homefragment-->

    <string name="home_btn_one">免费试听</string>
    <string name="home_btn_two">课程推荐</string>
    <string name="home_btn_three">每日一练</string>
    <string name="home_btn_four">知识资料</string>
    <string name="home_notification">要闻\n推荐</string>


    <string name="home_tuangou_one">限时团购</string>
    <string name="home_tuangou_two">热门套餐，轻松过关</string>
    <string name="home_tuangou_three">距离时间结束还有</string>
    <string name="home_tuangou_four">00:45:32</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--quality-->
    <string name="alivc_fd_definition">流畅</string>
    <string name="alivc_ld_definition">标清</string>
    <string name="alivc_sd_definition">高清</string>
    <string name="alivc_hd_definition">超清</string>
    <string name="alivc_k2_definition">2k</string>
    <string name="alivc_k4_definition">4k</string>
    <string name="alivc_od_definition">原画</string>


</resources>
