<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tuangou_one"
            android:textColor="@color/c161820"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/home_tuangou_two"
            android:textColor="@color/cE9412E"
            android:textSize="11dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/home_daojishi_bg"
        android:orientation="horizontal"
        android:paddingLeft="37dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tuangou_three"
            android:textColor="@color/white"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/home_tuangou_four"
            android:textColor="@color/white"
            android:textSize="11dp" />

    </LinearLayout>


</LinearLayout>