<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activitys.login.RegisteredActivity">


    <include layout="@layout/base_title" />


    <LinearLayout
        android:layout_width="311dp"
        android:layout_height="360dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                style="@style/reg_img"
                android:src="@drawable/login_phone" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/login_edit"
                android:layout_marginLeft="13dp"
                android:hint="@string/login_phone"
                android:inputType="number"
                android:maxLength="11" />
            <ImageView
                android:id="@+id/iv_phone_cancle"
                style="@style/edit_cancle" />

        </LinearLayout>

        <TextView
            style="@style/login_line"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="23dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                style="@style/reg_img"
                android:src="@drawable/login_code" />

            <EditText
                android:id="@+id/et_code"
                style="@style/login_edit"
                android:layout_width="0dp"
                android:layout_marginLeft="13dp"
                android:layout_weight="1"
                android:hint="@string/code"
                android:inputType="number"
                android:maxLength="6" />
            <ImageView
                android:id="@+id/iv_code_cancle"
                style="@style/edit_cancle"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/tv_sendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_getcode"
                android:textColor="@color/c888B96"
                android:textSize="14dp" />
        </LinearLayout>

        <TextView
            style="@style/login_line"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="23dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                style="@style/reg_img"
                android:src="@drawable/login_pwd" />

            <EditText
                android:id="@+id/et_pwd"
                style="@style/login_edit"
                android:layout_marginLeft="13dp"
                android:hint="@string/login_pwd"
                android:inputType="textPassword" />
            <ImageView
                android:id="@+id/iv_pwd_cancle"
                style="@style/edit_cancle" />
        </LinearLayout>

        <TextView
            style="@style/login_line"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="23dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                style="@style/reg_img"
                android:src="@drawable/login_pwd" />

            <EditText
                android:id="@+id/et_pwdR"
                style="@style/login_edit"
                android:layout_marginLeft="13dp"
                android:hint="@string/reg_pwd_re"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/iv_pwdr_cancle"
                style="@style/edit_cancle" />

        </LinearLayout>

        <TextView
            style="@style/login_line"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:textColor="@color/cFF0000"
            android:textSize="12dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/login_button"
        android:text="@string/reg_btn"
        android:translationY="-40dp" />


</LinearLayout>