<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activitys.login.LoginActivity">


    <include layout="@layout/login_title" />

    <ImageView
        android:layout_width="@dimen/dp_40"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/login_icon" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="300dp"
        android:layout_height="253dp"
        android:layout_weight="1" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_pwdLogin"
            style="@style/login_tv_one"
            android:layout_marginRight="32dp"
            android:layout_toLeftOf="@id/tv_line"
            android:drawableLeft="@drawable/login_btn_pwd"
            android:drawablePadding="11dp"
            android:text="@string/login_btn_pwd"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_codelogin"
            style="@style/login_tv_one"
            android:layout_marginRight="32dp"
            android:layout_toLeftOf="@id/tv_line"
            android:drawableLeft="@drawable/login_btn_code"
            android:drawablePadding="11dp"
            android:text="@string/login_code" />

        <TextView
            android:id="@+id/tv_line"
            android:layout_width="1dp"
            android:layout_height="21dp"
            android:layout_centerInParent="true"
            android:background="@color/cCFD0D5" />

        <TextView
            android:id="@+id/tv_wxlogin"
            style="@style/login_tv_one"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@id/tv_line"
            android:drawableLeft="@drawable/login_btn_wx"
            android:drawablePadding="11dp"
            android:text="@string/login_wx" />

    </RelativeLayout>


    <include layout="@layout/include_login_bottom" />

</LinearLayout>